Add entry in pyproject.toml to point to py.typed file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,6 @@ authors = [
   {name = "Davy Risso", email = "davy.risso@gmail.com"},
 ]
 readme = "README.md"
+
+[tool.setuptools.package-data]
+"pytopmod" = ["py.typed"]
