Move sources under a `src` directory to comply with setuptools src layout

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,8 @@ authors = [
 ]
 readme = "README.md"
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [tool.setuptools.package-data]
 "pytopmod" = ["py.typed"]
